force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/IF_SRM_SFDC_INFO_PRICE__c.object-meta.xml
<CustomObject>
    <label>IF_SRM_SFDC_INFO_PRICE</label>
    <nameField>
        <displayFormat>No-{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>