force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/aply_end_ymd__c.field-meta.xml
<CustomField>
    <fullName>aply_end_ymd__c</fullName>
    <label>aply_end_ymd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>