force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/aply_yn__c.field-meta.xml
<CustomField>
    <fullName>aply_yn__c</fullName>
    <label>aply_yn</label>
    <length>1</length>
    <type>Text</type>
</CustomField>