force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/comm_cd_nm__c.field-meta.xml
<CustomField>
    <fullName>comm_cd_nm__c</fullName>
    <label>comm_cd_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>