force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/crit_buy_prc__c.field-meta.xml
<CustomField>
    <fullName>crit_buy_prc__c</fullName>
    <label>crit_buy_prc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>