force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/cust_ordr_ddl_cl_cd__c.field-meta.xml
<CustomField>
    <fullName>cust_ordr_ddl_cl_cd__c</fullName>
    <label>cust_ordr_ddl_cl_cd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>