force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/del_yn__c.field-meta.xml
<CustomField>
    <fullName>del_yn__c</fullName>
    <label>del_yn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>