force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/gd_no__c.field-meta.xml
<CustomField>
    <fullName>gd_no__c</fullName>
    <label>gd_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>