force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/lgs_ctr_nm__c.field-meta.xml
<CustomField>
    <fullName>lgs_ctr_nm__c</fullName>
    <label>lgs_ctr_nm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>