force-app/main/default/objects/IF_SRM_SFDC_INFO_PRICE__c/fields/upd_dt__c.field-meta.xml
<CustomField>
    <fullName>upd_dt__c</fullName>
    <label>upd_dt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>